POST route to change account settings

--- a/app/coursify-ai/my_templates/Settings.html
+++ b/app/coursify-ai/my_templates/Settings.html
@@ -55,7 +55,7 @@
         <div id="settings-content">
           <!-- ACCOUNT SETTINGS FROM ------------------------------------------------------------------------->
           <!-------------------------------------------------------------------------------------------------->
-          <form id="account-settings-form" class="settings-form" action="{{ url_for('update_account_settings') }}" method="post">
+          <form id="account-settings-form" class="settings-form" > <!-- action="{{ url_for('update_account_settings') }}" method="post" -->
             <!-- First Name -->
             <div class="form-group">
                 <label for="firstname">First Name :</label>
