--- a/app/coursify-ai/my_templates/Settings.html
+++ b/app/coursify-ai/my_templates/Settings.html
@@ -28,8 +28,9 @@
         <nav class="navbar">
           <a href="{{ url_for('index') }}" id = "home">HOME</a>
           <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
-          <a href="settings.html" id = "settings">SETTINGS</a>
+          <a href="{{ url_for('reviews') }}">MY REVIEWS</a>
           <a href="ai.html" id = "ai">AI ASSISTANT</a>
+          <a href="settings.html" id = "settings">SETTINGS</a>
           <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
         </nav>
       </div>
