--- a/app/coursify-ai/my_templates/index.html
+++ b/app/coursify-ai/my_templates/index.html
@@ -26,11 +26,13 @@
 
             <nav class="navbar" >
               <div id ="sidebar"></div>
-                <a href="{{ url_for('index') }}" id = "home">HOME</a>
-                <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
-                <a href="settings.html" id = "settings">SETTINGS</a>
-                <a href="ai.html" id = "ai">AI ASSISTANT</a>
-                <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+              <a href="{{ url_for('index') }}" id = "home">HOME</a>
+              <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
+              <a href="{{ url_for('reviews') }}">MY REVIEWS</a>
+              <a href="ai.html" id = "ai">AI ASSISTANT</a>
+              <a href="settings.html" id = "settings">SETTINGS</a>
+              <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+                
 
             </div>
         </nav>
