review works but does not show slidename. i will probably adjust the feature

--- a/app/coursify-ai/my_templates/reviews.html
+++ b/app/coursify-ai/my_templates/reviews.html
@@ -10,7 +10,7 @@
     <div class="review">
         <h2>User: {{ review.user_id }}</h2>
         <h3>Slide: {{ review.filename }}</h3>
-        <p>{{ review.review_text }}</p>
+        <p>Review: {{ review.review_text }}</p>
     </div>
     {% endfor %}
 </body>
