reviews are working!!! but all the pdfs still show. i hope i can figure this out by tomorrow

--- a/app/coursify-ai/my_templates/ai.html
+++ b/app/coursify-ai/my_templates/ai.html
@@ -22,8 +22,8 @@
       <nav class="navbar">
         <a href="{{ url_for('index') }}" id = "home">HOME</a>
         <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
-        <a href="{{ url_for('reviews') }}">MY REVIEWS</a>
         <a href="ai.html" id = "ai">AI ASSISTANT</a>
+        <a href="{{ url_for('reviews') }}">REVIEW</a>
         <a href="settings.html" id = "settings">SETTINGS</a>
         <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
       </nav>
