--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -34,8 +34,8 @@
         <div id="sidebar">
           <a href="{{ url_for('index') }}" id = "home">HOME</a>
           <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
-          <a href="{{ url_for('reviews') }}">MY REVIEWS</a>
           <a href="ai.html" id = "ai">AI ASSISTANT</a>
+          <a href="{{ url_for('reviews') }}">REVIEW</a>
           <a href="settings.html" id = "settings">SETTINGS</a>
           <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
 
@@ -144,7 +144,7 @@
         <div class="note-summary">Click download to view the PDF...</div>
         <a href="" id="downloadLink" class="download-btn">Download</a>
         <button onclick="showForm()" id="shareButton" class="share-btn">Share</button>
-        <button onclick="showReviewForm(document.getElementById('reviewFileId').value, document.getElementById('reviewFilename').value)" id="reviewButton" class="review-btn">Review</button>
+        <!-- <button onclick="showReviewForm(document.getElementById('reviewFileId').value, document.getElementById('reviewFilename').value)" id="reviewButton" class="review-btn">Review</button> -->
       </div> 
     </div>
   </div>
@@ -160,7 +160,7 @@
 </div>
 
 <!--review form-->
-<div id="reviewForm" style="display: none;">
+<!-- <div id="reviewForm" style="display: none;">
   <form action="{{ url_for('submit_review') }}" method="post">
     <input type="hidden" id="reviewFileId" name="file_id">
     <input type="hidden" id="reviewFilename" name="filename">
@@ -168,7 +168,7 @@
     <textarea id="reviewText" name="review_text" required></textarea>
     <input type="submit" value="Submit Review">
   </form>
-</div>
+</div> -->
 
 
 <script>
@@ -199,14 +199,14 @@ for (var i = 0; i < noteCards.length; i++) {
         this.classList.add('clicked');
 });
 }}
-function showReviewForm(id, filename) {
+//function showReviewForm(id, filename) {
   // Set the file id and filename in the form
-  document.getElementById('reviewFileId').value = fileId;
-  document.getElementById('reviewFilename').value = filename;
+  //document.getElementById('reviewFileId').value = fileId;
+  //document.getElementById('reviewFilename').value = filename;
 
   // Show the form
-  document.getElementById('reviewForm').style.display = 'block';
-}
+  //document.getElementById('reviewForm').style.display = 'block';
+//}
 </script>
 
     <footer id="footer">&copy; 2023 CoursifyAI. All rights reserved.</footer>
