--- a/app/coursify-ai/my_templates/reviews.html
+++ b/app/coursify-ai/my_templates/reviews.html
@@ -27,7 +27,7 @@
             <nav class="navbar" >
               <div id ="sidebar"></div>
               <a href="{{ url_for('index') }}" id = "home">HOME</a>
-              <a href="{{ url_for('content') }}" id = "content">MY CONTENT</a>
+              <a href="{{ url_for('my_content') }}" id = "content">MY CONTENT</a>
               <a href="ai.html" id = "ai">AI ASSISTANT</a>
               <a href="{{ url_for('reviews') }}">REVIEW</a>
               <a href="settings.html" id = "settings">SETTINGS</a>
