--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -144,7 +144,7 @@
         <div class="note-summary">Click download to view the PDF...</div>
         <a href="" id="downloadLink" class="download-btn">Download</a>
         <button onclick="showForm()" id="shareButton" class="share-btn">Share</button>
-        <form action="" method="post" id="deleteForm">
+        <form action="" method="post" id="deleteForm" onsubmit="return confirm('Are you sure you want to delete this file ?');">
           <button type="submit" class="delete-btn">Delete</button>
         </form>  
       </div>
