--- a/app/coursify-ai/my_templates/faq.html
+++ b/app/coursify-ai/my_templates/faq.html
@@ -16,7 +16,7 @@
 
         <nav class="navbar">
             <a href="{{ url_for('index') }}" id="home">HOME</a>
-            <a href="{{ url_for('content') }}" id="content">MY CONTENT</a>
+            <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
             <a href="settings.html" id="settings">SETTINGS</a>
             <a href="ai.html" id="ai-assistant">AI ASSISTANT</a>
             <a href="#" id="logout">LOGOUT</a>
