--- a/app/coursify-ai/my_templates/email_verification.html
+++ b/app/coursify-ai/my_templates/email_verification.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,3 +33,4 @@
     <a href="{{ confirm_url }}" class="button">Verify Email</a>
 </body>
 </html>
+-->
