--- a/app/coursify-ai/my_templates/index.html
+++ b/app/coursify-ai/my_templates/index.html
@@ -85,15 +85,9 @@
                               <label>
                                   <input type="radio" name="format" value="pdf" id="pdf"> PDF
                               </label>
+                              
                               <label>
-                                  <input type="radio" name="format" value="docx" id = "docx"> DOCX
-                              </label>
-                              <label>
-                                  <input type="radio" name="format" value="epub" id="epub"> EPUB
-                                  
-                              </label>
-                              <label>
-                                <input type="radio" name="format" value="slides" id="epub"> Slides
+                                <input type="radio" name="format" value="slides" id="slides"> Slides
                             </label>
                           </div>
                             <div class="form-group">
