--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -143,6 +143,7 @@
         <div class="note-title" id="detailTitle"></div>
         <div class="note-summary">Click download to view the PDF...</div>
         <a href="" id="downloadLink" class="download-btn">Download</a>
+        <a href="" id="PreviewLink" class="preview-btn">Preview</a>
         <button onclick="showForm()" id="shareButton" class="share-btn">Share</button>
         <form action="" method="post" id="deleteForm" onsubmit="return confirm('Are you sure you want to delete this file ?');">
           <button type="submit" class="delete-btn">Delete</button>
@@ -160,6 +161,7 @@
     <label for="email">Recipient's Email:</label>
     <input type="email" id="email" name="email" required>
     <input type="submit" value="Share">
+    
   </form>
 </div>
 
@@ -182,6 +184,7 @@ document.getElementById('shareButton').addEventListener('click', function() {
 function showDetails(id, filename) {
   document.getElementById('detailTitle').textContent = filename;
   document.getElementById('downloadLink').href = "{{ url_for('get_pdf', filename='') }}" + filename;
+  document.getElementById('PreviewLink').href = "{{ url_for('preview', filename='') }}" + filename;
   document.getElementById('note-details').style.display = 'block';
   document.getElementById('deleteForm').action = '/delete/' + id;
 }
