--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -44,87 +44,6 @@
       <i class="bx bx-menu"></i>
     </header>
 
-    <!-- My Content Section -->
-    <!-- <section id="my-content">
-      <div class="content-header">
-        <h1 id = "title">My Notes</h1>
-      </div>
-      <div class="notes-container"> -->
-        <!-- Note Cards -->
-        <!-- <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div>
-        <div class="note-card">
-          <div class="note-title">Note Title 1</div>
-          <div class="note-summary">Brief summary of the note...</div>
-          <button class="download-btn">Download</button>
-        </div> -->
-        <!-- Repeat for more note cards -->
-        <!-- Add more cards as needed -->
-      <!-- </div>
-    </section> -->
-
-    <!-- <section id="my-content">
-      <div class="content-header">
-        <h1 id = "title">My Notes</h1>
-      </div>
-      <div class="notes-container"> -->
-        <!-- Note Cards -->
-        <!-- {% for file in file_data %}
-        <div class="note-card">
-          <div class="note-title">{{ file.filename }}</div>
-          <div class="note-summary">Click download to view the PDF...</div>
-          <a href="{{ url_for('get_pdf', filename=file.filename) }}" class="download-btn">Download</a> -->
-          <!-- Share Button -->
-      <!-- <button onclick="showForm('{{ file._id }}')" class="share-btn">Share</button>
-    </div>
-    {% endfor %}
-  </div>
-</section> -->
-
-
-
-<!-- Share Form -->
-<!-- <div id="shareForm" style="display: none;">
-  <form action="{{ url_for('share_via_email') }}" method="post">
-    <input type="hidden" id="fileId" name="file_id">
-    <label for="email">Recipient's Email:</label>
-    <input type="email" id="email" name="email" required>
-    <input type="submit" value="Share">
-  </form>
-</div> -->
 <section id="my-content">
   <div class="content-header">
     <h1 id = "title">My Notes</h1>
@@ -144,10 +63,13 @@
         <div class="note-summary">Click download to view the PDF...</div>
         <a href="" id="downloadLink" class="download-btn">Download</a>
         <a href="" id="PreviewLink" class="preview-btn">Preview</a>
+        
         <button onclick="showForm()" id="shareButton" class="share-btn">Share</button>
         <form action="" method="post" id="deleteForm" onsubmit="return confirm('Are you sure you want to delete this file ?');">
           <button type="submit" class="delete-btn">Delete</button>
         </form>  
+        <br>
+        <div id="quizButtonContainer"></div>
       </div>
         <!-- <button onclick="showReviewForm(document.getElementById('reviewFileId').value, document.getElementById('reviewFilename').value)" id="reviewButton" class="review-btn">Review</button> -->
       </div> 
@@ -251,6 +173,26 @@ function showDetails(id, filename) {
   document.getElementById('downloadLink').href = "{{ url_for('get_pdf', filename='') }}" + filename;
   document.getElementById('PreviewLink').href = "{{ url_for('preview', filename='') }}" + filename;
 
+  var quizButtonContainer = document.getElementById('quizButtonContainer'); // Ensure this is the correct ID for your container
+
+    // Check if the "Generate Quiz" button already exists
+    var existingQuizLink = document.querySelector('.generate-quiz-link');
+    if (existingQuizLink) {
+        // If the button exists, update its onclick event with the new file ID
+        existingQuizLink.onclick = function() {
+            generateQuiz(id); // Use `id` to generate quiz for the current file
+        };
+    } else {
+        // If the button doesn't exist, create it
+        var generateQuizLink = document.createElement('a');
+        generateQuizLink.textContent = 'Generate Quiz';
+        generateQuizLink.href = "javascript:void(0);"; // Prevent the link from navigating
+        generateQuizLink.className = 'generate-quiz-link';
+        generateQuizLink.onclick = function() {
+            generateQuiz(id); // Use `id` to generate quiz for the current file
+        };
+        quizButtonContainer.appendChild(generateQuizLink); // Append the new link to the container
+    }
 
   // Get the downloadLink button
   var downloadLink = document.getElementById('downloadLink');
@@ -295,6 +237,20 @@ function showForm() {
   // Show the form
   document.getElementById('shareForm').style.display = 'block';
 }
+function generateQuiz(fileId) {
+    fetch(`/generate_quiz/${fileId}`)
+    .then(response => response.json())
+    .then(data => {
+        if (data.error) {
+            alert("Failed to generate quiz: " + data.error);
+        } else {
+            // Display questions to the user
+            console.log(data.questions);  // For demonstration purposes
+            // Here, you might update the DOM to show the questions or navigate to a new page
+        }
+    })
+    .catch(error => console.error('Error generating quiz:', error));
+}
 window.onload = function() {
   var noteCards = document.getElementsByClassName('note-card');
 
@@ -317,6 +273,48 @@ for (var i = 0; i < noteCards.length; i++) {
   // Show the form
   //document.getElementById('reviewForm').style.display = 'block';
 //}
+
+document.addEventListener("DOMContentLoaded", function() {
+  // Assuming 'showDetails' function is updated to include generating and attaching 'Generate Quiz' button as discussed earlier.
+  
+  // Function to handle Quiz Generation
+  function handleQuizGeneration(fileId) {
+    var generateQuizButton = document.querySelector('.generate-quiz-link'); // Assuming this class is used for the button
+    if (generateQuizButton) {
+      generateQuizButton.textContent = "Generating Quiz...";
+      generateQuizButton.style.color = "#FFA500"; // Orange color for generating state
+      generateQuizButton.disabled = true;
+
+      fetch(`/generate_quiz/${fileId}`)
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Failed to generate quiz');
+          }
+          return response.blob(); // Assuming the response is a blob for a downloadable file
+        })
+        .then(blob => {
+          const downloadUrl = URL.createObjectURL(blob);
+          generateQuizButton.textContent = "Download Quiz";
+          generateQuizButton.style.color = "green";
+          generateQuizButton.onclick = function() {
+            window.location.href = downloadUrl; // URL of the generated quiz file
+            generateQuizButton.textContent = "Generate Quiz"; // Reset button text after download
+            generateQuizButton.style.color = ""; // Reset button color
+            generateQuizButton.disabled = false; // Enable button again for future use
+          };
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          generateQuizButton.textContent = "Failed to Generate";
+          generateQuizButton.style.color = "red"; // Red color for error state
+          generateQuizButton.disabled = false;
+        });
+    }
+  }
+  
+  // Example of how you might call handleQuizGeneration from within showDetails or another appropriate place
+  // showDetails function or similar needs to setup 'generateQuizButton.onclick' to call 'handleQuizGeneration' with the correct fileId
+});
 </script>
 
     <footer id="footer">&copy; 2023 CoursifyAI. All rights reserved.</footer>
