--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -281,13 +281,19 @@ function showDetails(id, filename) {
 
   document.getElementById('note-details').style.display = 'block';
   document.getElementById('deleteForm').action = '/delete/' + id;
+
+  // Set the onclick attribute of the "Share" button to call the showForm function with the correct file id
+  document.getElementById('shareButton').onclick = function() { showForm(id); };
 }
 
-
-function showForm() {
+function showForm(fileId) {
   // Show the form
   document.getElementById('shareForm').style.display = 'block';
+  
+  // Set the file's ID in the form
+  document.getElementById('fileId').value = fileId;
 }
+
 window.onload = function() {
   var noteCards = document.getElementsByClassName('note-card');
 
