--- a/app/coursify-ai/my_templates/register.html
+++ b/app/coursify-ai/my_templates/register.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Coursify.ai</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleLogin.css') }}">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <header class="header">
         <div class="link_container">
-          <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='cap_logo1.png') }}" id="logo"></a>
+          <!--<a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='cap_logo1.png') }}" id="logo"></a>-->
     </div>
     </header>
+
+    <!-- -->
 </head>
 <body id="register" style="background: var(--bg-color);">
     <div class="container">
-        <div class="row justify-content-center align-items-center vh-100">
+        <!--<div class="row justify-content-center align-items-center vh-100">-->
             <div class="col-md-6">
-                <div class="form-container bg-white p-4 rounded shadow-sm">
-                    <h2 class="mb-4 text-center">Register</h2>
+                <!--<div class="form-container bg-white p-4 rounded shadow-sm">-->
+                    <h2 class="text-center-R">REGISTER</h2>
                     <form id="register-form" method="POST" action="/register">
                         <div class="form-group">
                             <label for="firstName">First Name:</label>
                             <input type="text" id="firstName" name="first_name" class="form-control" required>
+                            
                         </div>
                         <div class="form-group">
                             <label for="lastName">Last Name:</label>
@@ -31,12 +34,14 @@
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" class="form-control" required>
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                            <span class="input-message" id="emailMessage" style="display: none;">We'll never share your email with anyone else.</span>
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
                             <input type="password" id="password" name="password" class="form-control" required>
-                            <small id="passwordHelp" class="form-text text-muted">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</small>
+                            <!-- <small id="passwordHelp" class="form-text text-muted">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</small> -->
+                            <span class="input-message" id="pwMessage" style="display: none;">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</span>
                         </div>
                         <div class="form-group">
                             <label for="confirmPassword">Confirm Password:</label>
@@ -68,6 +73,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!--
                         <fieldset class="form-group">
                             <legend class="col-form-label pt-0">Gender</legend>
                             <div class="form-check">
@@ -89,17 +95,18 @@
                                 </label>
                                 <input type="text" id="customGender" name="custom_gender" class="form-control" style="display:none;" placeholder="Enter your gender">
                             </div>
-                        </fieldset>
-                        <div class="form-group">
+                        </fieldset>-->
+                        <div id="regbtn" class="form-group">
                             <input type="submit" value="Register" class="btn btn-primary btn-block">
                         </div>
                     </form>
                     <div class="mt-4 text-center">
-                        <a href="{{ url_for('login') }}" class="btn btn-secondary">Go to Login Page</a>
+                        <P> Already a member?</P>
+                        <a href="{{ url_for('login') }}" class="btn btn-secondary">Login</a>
                     </div>
-                </div>
+                <!--</div>-->
             </div>
-        </div>
+        <!--</div>-->
     </div>
     <script>
         // Show custom gender input field when 'Custom' is selected
@@ -138,6 +145,38 @@
                 $("#passwordHelp").text("Password strength: strong").css("color", "green");
             }
         });
+        document.addEventListener('DOMContentLoaded', function () {
+            // Function to show a message
+            function showMessage(inputId, messageId) {
+                var input = document.getElementById(inputId);
+                var message = document.getElementById(messageId);
+                input.addEventListener('focus', function () {
+                    message.style.display = 'inline'; // Show message
+                });
+                input.addEventListener('blur', function () {
+                    message.style.display = 'none'; // Hide message
+                });
+                }
+                // Example usage for the firstName field
+                showMessage('email', 'emailMessage');
+                // Add similar lines for other input fields as needed
+        });
+        document.addEventListener('DOMContentLoaded', function () {
+                // Function to show a message
+            function showMessage(inputId, messageId) {
+                var input = document.getElementById(inputId);
+                var message = document.getElementById(messageId);
+                input.addEventListener('focus', function () {
+                    message.style.display = 'inline'; // Show message
+                });
+                input.addEventListener('blur', function () {
+                    message.style.display = 'none'; // Hide message
+                });
+                }
+                // Example usage for the firstName field
+                showMessage('password', 'pwMessage');
+                // Add similar lines for other input fields as needed
+            });
     </script>
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
