--- a/app/coursify-ai/my_templates/homepage.html
+++ b/app/coursify-ai/my_templates/homepage.html
@@ -12,6 +12,7 @@
     <div class="container vh-100">
         <div class="inner-content">
           <h1 class="text-center">Welcome to Coursify.ai</h1>
+          <P>Empowering Educators with AI Efficiency <P>
           <div class="d-flex justify-content-center">
             <a href="/login" class="btn btn-coursify mx-2">Login</a>
             <a href="/register" class="btn btn-coursify mx-2">Register</a>
