--- a/app/coursify-ai/my_templates/reviews.html
+++ b/app/coursify-ai/my_templates/reviews.html
@@ -46,6 +46,20 @@
                     <i class="bx bxs-star" data-value="4"></i>
                     <i class="bx bxs-star" data-value="5"></i>
                 </div>
+                <select name="subject" id="subject" placeholder="Subject">
+                    <option value="choose">Choose Subject</option> <!-- Dropdown list for subject -->
+                    <option value="math">Math</option>
+                    <option value="geography">Geography</option>
+                    <option value="history">History</option>
+                    <option value="biology">Biology</option>
+                    <option value="chemistry">Chemistry</option>
+                    <option value="physics">Physics</option>
+                    <option value="english">English</option>
+                    <option value="economics">Economics</option>
+                    <option value="compsci">Computer Science</option>
+                    <option value="business">Business</option>
+                    <option value="other">Other</option>
+                </select>
                 <textarea name="review_text" placeholder="Write your review here..."></textarea>
                 <input type="hidden" name="star_rating" id="star_rating" value=""> <!-- Hidden field to store rating -->
                 <button type="submit">Submit Review</button>
